hard-gists-me/455694506ee6595c92e4/log.txt
Traceback (most recent call last):
  File "snippet.py", line 4, in <module>
    from chainer import Variable, FunctionSet, optimizers, cuda
  File "/usr/local/lib/python2.7/site-packages/chainer/__init__.py", line 10, in <module>
    from chainer import backends  # NOQA
  File "/usr/local/lib/python2.7/site-packages/chainer/backends/__init__.py", line 1, in <module>
    from chainer.backends import cuda  # NOQA
  File "/usr/local/lib/python2.7/site-packages/chainer/backends/cuda.py", line 77
    def shape(self) -> types.Shape:
                    ^
SyntaxError: invalid syntax
